@@ -1,3 +1,9 @@
+Jun 21, 2004
+
+  * FIXED: Handling continue header required for POST to MS IIS servers.
+    Also more patches sending \r\n where required.  With patches from
+    Mike Elston.
+
 Jun 16, 2004
 
   * FIXED: make HTTP client library write header line terminate with
